[project]
name = "quarto-blog"
version = "1.0.0"
description = "Dependências do meu blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "arviz>=0.22.0",
    "bitsandbytes>=0.46.1",
    "gradio>=5.38.2",
    "interpret>=0.7.1",
    "jax[cpu]>=0.7.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "langchain>=0.3.27",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "pymc>=5",
    "pypdf>=5.9.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "scrapy>=2.13.3",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "sktime>=0.38.4",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.1",
    "tsfresh>=0.21.0",
    "xarray>=2025.7.1",
    "xgboost>=3.0.2",
    "yellowbrick>=1.5",
]
